fix the details overlay blurring wierdly

--- a/style.scss
+++ b/style.scss
@@ -51,6 +51,7 @@ body {
                     text-decoration: none;
                     overflow: hidden;
                     position: relative;
+                    background-size: cover;
 
                     .work-desc {
                         display: block;
@@ -58,7 +59,7 @@ body {
                         height: auto;
                         width: 90%;
                         transform: translateY(175px);
-                        transition: all 0.5s ease-in-out;
+                        transition: transform 0.5s ease-in-out;
                         z-index: 10;
                         pointer-events: none;
 
@@ -76,7 +77,9 @@ body {
                         width: 100%;
                         pointer-events: none;
                         z-index: 5;
-                        transition: backdrop-filter 0.5s ease 0.2s;
+                        opacity: 0;
+                        backdrop-filter: blur(5px);
+                        transition: opacity 0.5s ease 0.2s;
                     }
 
                     .work-link-container {
@@ -119,17 +122,9 @@ body {
                         &:hover {
                             background-color: rgba(200, 200, 200, 0.25);
                             box-shadow: inset 1px 1px 0px 0px rgba(0, 0, 0, 0.5);
-                            
+
                             span {
                                 transform: translate(1px, 1px);
-                            }
-
-                            +.blur-overlay {
-                                backdrop-filter: blur(5px);
-
-                                .work-desc {
-                                    transform: translateY(0);
-                                }
                             }
                         }
                     }
@@ -184,4 +179,12 @@ h3,
 a,
 p {
     font-family: $content-font;
+}
+
+.blur-overlay-active {
+    opacity: 1 !important;
+}
+
+.work-desc-active {
+    transform: translateY(0) !important;
 }
